[gd_scene load_steps=8 format=3 uid="uid://bivjwciblkbxo"]

[ext_resource type="Script" uid="uid://b4a4bgnldcomw" path="res://MultiPlayer/Player_Banner.gd" id="1_7hnwi"]
[ext_resource type="Shader" uid="uid://c1qldd1mghvci" path="res://MultiPlayer/Ready_Check.gdshader" id="1_kr75h"]

[sub_resource type="CanvasTexture" id="CanvasTexture_0fub5"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7hnwi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7hnwi"]
shader = ExtResource("1_kr75h")

[sub_resource type="CanvasTexture" id="CanvasTexture_kr75h"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_7hnwi"]
properties/0/path = NodePath("PlayerName:text")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Ready_Check:visible")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player_Banner" type="Control"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7hnwi")

[node name="NameBanner" type="Sprite2D" parent="."]
self_modulate = Color(9.866804e-07, 0, 0.43968928, 1)
position = Vector2(150, 20)
scale = Vector2(300, 40)
texture = SubResource("CanvasTexture_0fub5")

[node name="PlayerName" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(290, 40)
layout_mode = 0
offset_left = 10.0
offset_right = 300.0
offset_bottom = 40.0
text = "PlayerName"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="Ready" type="Button" parent="."]
custom_minimum_size = Vector2(56, 40)
layout_mode = 0
offset_left = 350.0
offset_right = 406.0
offset_bottom = 40.0
text = "Ready"

[node name="Unchecked" type="Sprite2D" parent="."]
position = Vector2(325, 20)
scale = Vector2(10, 10)
texture = SubResource("CanvasTexture_7hnwi")

[node name="Ready_Check" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_7hnwi")
position = Vector2(325, 20)
scale = Vector2(10, 10)
texture = SubResource("CanvasTexture_kr75h")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_7hnwi")

[connection signal="pressed" from="Ready" to="." method="_on_ready_pressed"]
